# ChangeLog for dev-python/u1db
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  05 Dec 2014; Harold Naparst <harold@alum.mit.edu> u1db-13.10.ebuild:
  Add [${PYTHON_USEDEP}]

*u1db-13.10 (02 Dec 2014)

  02 Dec 2014; Harold Naparst <harold@alum.mit.edu> +u1db-13.10.ebuild,
  +metadata.xml:
  Add u1db-13.10
